Verbs for Pushing
Translate verbs:
- `push_with` to `spingi`
- `push_with` to `spingi_con`

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.25-Alpha,</span>
+<span id="revnumber">versione 0.7.26-Alpha,</span>
 <span id="revdate">2018-11-09</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -631,6 +631,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_nuota_in">nuota_in</a></li>
 <li><a href="#_tuffati">tuffati</a></li>
 <li><a href="#_tuffati_in">tuffati_in</a></li>
+</ul>
+</li>
+<li><a href="#_spingere_e_tirare">Spingere e Tirare</a>
+<ul class="sectlevel3">
+<li><a href="#_spingi">spingi</a></li>
+<li><a href="#_spingi_con">spingi_con</a></li>
+<li><a href="#_tira">tira</a></li>
 </ul>
 </li>
 </ul>
@@ -1750,6 +1757,24 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>spingi</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">spingi (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>spingi_con</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">spingi (ogg) con (strum)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3060,6 +3085,40 @@ e riparare cose:</p>
 
 </div>
 </div>
+<div class="sect2">
+<h3 id="_spingere_e_tirare"><a class="anchor" href="#_spingere_e_tirare"></a>Spingere e Tirare</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per spingere e tirare oggetti:</p>
+</div>
+<div class="paragraph">
+<p>Verbi di questo gruppo non ancora spostati:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>spingi</code></p>
+</li>
+<li>
+<p><code>spingi_con</code></p>
+</li>
+<li>
+<p><code>tira</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_spingi"><a class="anchor" href="#_spingi"></a>spingi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_spingi_con"><a class="anchor" href="#_spingi_con"></a>spingi_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_tira"><a class="anchor" href="#_tira"></a>tira</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -3214,20 +3273,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>pry_with</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">pry (obj) with (instr)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>push</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">push (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>push_with</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">push (obj) with (instr)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
@@ -3586,6 +3631,15 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>tuffati_in</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>spingi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>spingi_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>tira</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -3594,7 +3648,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.25-Alpha<br>
+Versione 0.7.26-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
