--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.16-Alpha,</span>
+<span id="revnumber">versione 0.7.17-Alpha,</span>
 <span id="revdate">2018-11-09</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -523,6 +523,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN bruciare.                 ---&gt; burn
   CAN bruciare_con.             ---&gt; burn_with
   CAN bussare.                  ---&gt; knock
+  CAN calciare.                 ---&gt; kick
   CAN cantare.                  ---&gt; sing
   CAN caricare_partita.         ---&gt; 'restore'
   CAN chiedere.                 ---&gt; ask_for
@@ -744,7 +745,6 @@ italiano del modulo delle definizioni.</p>
   CAN fire_at.
 --CAN get_up. --------------------&gt; ** VERBO ELIMINATO **
   CAN hint.        -- (+ hints)
-  CAN kick.
   CAN lift.
 --CAN light. ---------------------&gt; ** VERBO ELIMINATO **
 --CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.16-Alpha<br>
+Versione 0.7.17-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
