--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.26-Alpha,</span>
+<span id="revnumber">versione 0.7.27-Alpha,</span>
 <span id="revdate">2018-11-09</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -638,6 +638,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_spingi">spingi</a></li>
 <li><a href="#_spingi_con">spingi_con</a></li>
 <li><a href="#_tira">tira</a></li>
+</ul>
+</li>
+<li><a href="#_attaccare_e_simili">Attaccare e Simili</a>
+<ul class="sectlevel3">
+<li><a href="#_attacca">attacca</a></li>
+<li><a href="#_attacca_con">attacca_con</a></li>
+<li><a href="#_calcia">calcia</a></li>
+<li><a href="#_uccidi">uccidi</a></li>
+<li><a href="#_uccidi_con">uccidi_con</a></li>
 </ul>
 </li>
 </ul>
@@ -1091,6 +1100,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>calcia</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">calcia (bersaglio)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3119,6 +3137,52 @@ e riparare cose:</p>
 
 </div>
 </div>
+<div class="sect2">
+<h3 id="_attaccare_e_simili"><a class="anchor" href="#_attaccare_e_simili"></a>Attaccare e Simili</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi di violenza come attaccare, uccidere, prendere
+a calci, colpire e simili:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>attacca</code></p>
+</li>
+<li>
+<p><code>attacca_con</code></p>
+</li>
+<li>
+<p><code>calcia</code></p>
+</li>
+<li>
+<p><code>uccidi</code></p>
+</li>
+<li>
+<p><code>uccidi_con</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_attacca"><a class="anchor" href="#_attacca"></a>attacca</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_attacca_con"><a class="anchor" href="#_attacca_con"></a>attacca_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_calcia"><a class="anchor" href="#_calcia"></a>calcia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_uccidi"><a class="anchor" href="#_uccidi"></a>uccidi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_uccidi_con"><a class="anchor" href="#_uccidi_con"></a>uccidi_con</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -3239,13 +3303,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">hints</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">hint</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>kick</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">kick (target)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3640,6 +3697,21 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>tira</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>attacca</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>attacca_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>calcia</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>uccidi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>uccidi_con</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -3648,7 +3720,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.26-Alpha<br>
+Versione 0.7.27-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
