--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -760,6 +760,12 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-left valign-top"><p class="tableblock">== Spingere e Tirare</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>21800</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_attaccare</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Attaccare e Simili</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>30000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_comandi_domande</code></p></td>
