--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.27-Alpha,</span>
+<span id="revnumber">versione 0.7.28-Alpha,</span>
 <span id="revdate">2018-11-09</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -647,6 +647,40 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_calcia">calcia</a></li>
 <li><a href="#_uccidi">uccidi</a></li>
 <li><a href="#_uccidi_con">uccidi_con</a></li>
+</ul>
+</li>
+<li><a href="#_verbi_sfusi">Verbi Sfusi</a>
+<ul class="sectlevel3">
+<li><a href="#_aspetta">aspetta</a></li>
+<li><a href="#_attraversa">attraversa</a></li>
+<li><a href="#_bacia">bacia</a></li>
+<li><a href="#_balla">balla</a></li>
+<li><a href="#_brucia">brucia</a></li>
+<li><a href="#_brucia_con">brucia_con</a></li>
+<li><a href="#_canta">canta</a></li>
+<li><a href="#_consulta">consulta</a></li>
+<li><a href="#_dormi">dormi</a></li>
+<li><a href="#_gioca_con">gioca_con</a></li>
+<li><a href="#_gratta">gratta</a></li>
+<li><a href="#_guida">guida</a></li>
+<li><a href="#_inventario">inventario</a></li>
+<li><a href="#_lega">lega</a></li>
+<li><a href="#_lega_a">lega_a</a></li>
+<li><a href="#_leggi">leggi</a></li>
+<li><a href="#_libera">libera</a></li>
+<li><a href="#_pensa">pensa</a></li>
+<li><a href="#_pensa_a">pensa_a</a></li>
+<li><a href="#_prega">prega</a></li>
+<li><a href="#_riempi">riempi</a></li>
+<li><a href="#_riempi_con">riempi_con</a></li>
+<li><a href="#_rifai">rifai</a></li>
+<li><a href="#_scava">scava</a></li>
+<li><a href="#_scrivi">scrivi</a></li>
+<li><a href="#_suona">suona</a></li>
+<li><a href="#_trova">trova</a></li>
+<li><a href="#_usa">usa</a></li>
+<li><a href="#_usa_con">usa_con</a></li>
+<li><a href="#_vai_a">vai_a</a></li>
 </ul>
 </li>
 </ul>
@@ -3183,6 +3217,227 @@ a calci, colpire e simili:</p>
 
 </div>
 </div>
+<div class="sect2">
+<h3 id="_verbi_sfusi"><a class="anchor" href="#_verbi_sfusi"></a>Verbi Sfusi</h3>
+<div class="paragraph">
+<p>Questo gruppo raccoglie i verbi per i quali non è ancora stato creato un:
+gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>aspetta</code></p>
+</li>
+<li>
+<p><code>attraversa</code></p>
+</li>
+<li>
+<p><code>bacia</code></p>
+</li>
+<li>
+<p><code>balla</code></p>
+</li>
+<li>
+<p><code>brucia</code></p>
+</li>
+<li>
+<p><code>brucia_con</code></p>
+</li>
+<li>
+<p><code>canta</code></p>
+</li>
+<li>
+<p><code>consulta</code></p>
+</li>
+<li>
+<p><code>dormi</code></p>
+</li>
+<li>
+<p><code>gioca_con</code></p>
+</li>
+<li>
+<p><code>gratta</code></p>
+</li>
+<li>
+<p><code>guida</code></p>
+</li>
+<li>
+<p><code>inventario</code></p>
+</li>
+<li>
+<p><code>lega</code></p>
+</li>
+<li>
+<p><code>lega_a</code></p>
+</li>
+<li>
+<p><code>leggi</code></p>
+</li>
+<li>
+<p><code>libera</code></p>
+</li>
+<li>
+<p><code>pensa</code></p>
+</li>
+<li>
+<p><code>pensa_a</code></p>
+</li>
+<li>
+<p><code>prega</code></p>
+</li>
+<li>
+<p><code>riempi</code></p>
+</li>
+<li>
+<p><code>riempi_con</code></p>
+</li>
+<li>
+<p><code>rifai</code></p>
+</li>
+<li>
+<p><code>scava</code></p>
+</li>
+<li>
+<p><code>scrivi</code></p>
+</li>
+<li>
+<p><code>suona</code></p>
+</li>
+<li>
+<p><code>trova</code></p>
+</li>
+<li>
+<p><code>usa</code></p>
+</li>
+<li>
+<p><code>usa_con</code></p>
+</li>
+<li>
+<p><code>vai_a</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_aspetta"><a class="anchor" href="#_aspetta"></a>aspetta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_attraversa"><a class="anchor" href="#_attraversa"></a>attraversa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_bacia"><a class="anchor" href="#_bacia"></a>bacia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_balla"><a class="anchor" href="#_balla"></a>balla</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_brucia"><a class="anchor" href="#_brucia"></a>brucia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_brucia_con"><a class="anchor" href="#_brucia_con"></a>brucia_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_canta"><a class="anchor" href="#_canta"></a>canta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_consulta"><a class="anchor" href="#_consulta"></a>consulta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_dormi"><a class="anchor" href="#_dormi"></a>dormi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_gioca_con"><a class="anchor" href="#_gioca_con"></a>gioca_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_gratta"><a class="anchor" href="#_gratta"></a>gratta</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guida"><a class="anchor" href="#_guida"></a>guida</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_inventario"><a class="anchor" href="#_inventario"></a>inventario</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_lega"><a class="anchor" href="#_lega"></a>lega</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_lega_a"><a class="anchor" href="#_lega_a"></a>lega_a</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_leggi"><a class="anchor" href="#_leggi"></a>leggi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_libera"><a class="anchor" href="#_libera"></a>libera</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_pensa"><a class="anchor" href="#_pensa"></a>pensa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_pensa_a"><a class="anchor" href="#_pensa_a"></a>pensa_a</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_prega"><a class="anchor" href="#_prega"></a>prega</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_riempi"><a class="anchor" href="#_riempi"></a>riempi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_riempi_con"><a class="anchor" href="#_riempi_con"></a>riempi_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_rifai"><a class="anchor" href="#_rifai"></a>rifai</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_scava"><a class="anchor" href="#_scava"></a>scava</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_scrivi"><a class="anchor" href="#_scrivi"></a>scrivi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_suona"><a class="anchor" href="#_suona"></a>suona</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_trova"><a class="anchor" href="#_trova"></a>trova</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_usa"><a class="anchor" href="#_usa"></a>usa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_usa_con"><a class="anchor" href="#_usa_con"></a>usa_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_vai_a"><a class="anchor" href="#_vai_a"></a>vai_a</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -3712,6 +3967,96 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>uccidi_con</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>aspetta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>attraversa</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>bacia</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>balla</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>brucia</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>brucia_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>canta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>consulta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>dormi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>gioca_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>gratta</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guida</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>inventario</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>lega</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>lega_a</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>leggi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>libera</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>pensa</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>pensa_a</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>prega</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>riempi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>riempi_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>rifai</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>scava</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>scrivi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>suona</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>trova</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>usa</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>usa_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>vai_a</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -3720,7 +4065,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.27-Alpha<br>
+Versione 0.7.28-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
